# Queue-CrossCompilation

./: LICENSE.md  Makefile  README.md  config.h  config.status  configure  configure.ac  configure.ac~  libtool
amqueue-2.0/: Makefile.am  Makefile.in  configure  configure.ac
amqueue-2.0/_build/sub/: Makefile  config.h  config.status
amqueue-2.0/_build/sub/lib/: Makefile  libqueue.la
amqueue-2.0/_build/sub/lib/.deps/: queue.Plo
amqueue-2.0/_build/sub/lib/.libs/: libqueue.lai  libqueue.so.0.0.0
amqueue-2.0/_build/sub/po/: Makefile  Makefile.in  POTFILES
amqueue-2.0/_build/sub/src/: Makefile  assistant
amqueue-2.0/_build/sub/src/.deps/: assistant.Po
amqueue-2.0/_build/sub/src/.libs/: assistant
amqueue-2.0/lib/: Makefile.in  queue.h
amqueue-2.0/po/: POTFILES.in  amqueue.pot
amqueue-2.0/src/: Makefile.in  assistant.c
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
lib/: Makefile  Makefile.am  Makefile.in  libqueue.la  queue.c  queue.lo
lib/.deps/: queue.Plo
lib/.libs/: libqueue.lai  libqueue.so.0.0.0
po/: Makefile  Makefile.in  POTFILES  en_IN.po  hi.po
src/: Makefile  Makefile.am  Makefile.in  assistant
src/.deps/: assistant.Po
src/.libs/: assistant
